[package]
name = "aojia"
version = "0.1.0"
edition = "2024"

[lib]
name = "aojia"
path = "src/lib.rs"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
    "Win32_System_Ole",
    "Win32_System_Variant",
]}
once_cell = "1.21"
